<resources>
    <string name="app_name">Mastery Tech Task</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Login Fragment</string>
    <string name="driver_list_fragment_label">Driver List Fragment</string>
    <string name="login">Login</string>
    <string name="previous">Previous</string>

    <string name="hello_login_fragment">Enter your login information</string>

    <string name="login_fill_error">Please enter username and password</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="phone_number">Phone number</string>
    <string name="trailer_type">Trailer type</string>
    <string name="trailer_dimensions">Trailer dimensions (L x H x W)</string>
    <string name="dimens">%1$d x %2$d x %3$d</string>
    <string name="location">Location</string>
    <string name="latlong">%1$s : %2$s</string>
    <string name="plate_number">Plate Number</string>
</resources>