<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/detailsFirstNameLabelTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/detailsFirstNameTxt"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detailsFirstNameTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toEndOf="@id/detailsFirstNameLabelTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/detailsFirstNameLabelTxt" />

    <TextView
        android:id="@+id/detailsLastNameLabelTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/detailsLastNameTxt"
        app:layout_constraintTop_toBottomOf="@id/detailsFirstNameLabelTxt" />

    <TextView
        android:id="@+id/detailsLastNameTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toEndOf="@id/detailsLastNameLabelTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/detailsLastNameLabelTxt" />

    <TextView
        android:id="@+id/detailsPhoneNumberLabelTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/detailsPhoneNumberTxt"
        app:layout_constraintTop_toBottomOf="@id/detailsLastNameLabelTxt" />

    <TextView
        android:id="@+id/detailsPhoneNumberTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toEndOf="@id/detailsPhoneNumberLabelTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/detailsPhoneNumberLabelTxt" />

    <TextView
        android:id="@+id/detailsTrailerTypeLabelTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/trailer_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/detailsTrailerTypeTxt"
        app:layout_constraintTop_toBottomOf="@id/detailsPhoneNumberLabelTxt" />

    <TextView
        android:id="@+id/detailsTrailerTypeTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toEndOf="@id/detailsTrailerTypeLabelTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/detailsTrailerTypeLabelTxt" />


    <TextView
        android:id="@+id/detailsTrailerDimensionsLabelTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/trailer_dimensions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/detailsTrailerDimensionsTxt"
        app:layout_constraintTop_toBottomOf="@id/detailsTrailerTypeLabelTxt" />

    <TextView
        android:id="@+id/detailsTrailerDimensionsTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toEndOf="@id/detailsTrailerDimensionsLabelTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/detailsTrailerDimensionsLabelTxt" />

    <TextView
        android:id="@+id/detailsPlateNumberLabelTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/plate_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/detailsPlateNumberTxt"
        app:layout_constraintTop_toBottomOf="@id/detailsTrailerDimensionsLabelTxt" />

    <TextView
        android:id="@+id/detailsPlateNumberTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toEndOf="@id/detailsPlateNumberLabelTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/detailsPlateNumberLabelTxt" />

    <TextView
        android:id="@+id/detailsLocationLabelTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/detailsLocationTxt"
        app:layout_constraintTop_toBottomOf="@id/detailsPlateNumberLabelTxt" />

    <TextView
        android:id="@+id/detailsLocationTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toEndOf="@id/detailsLocationLabelTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/detailsLocationLabelTxt" />

</androidx.constraintlayout.widget.ConstraintLayout>